@@ -4,6 +4,7 @@
 
 * Adding #389 unlock GPU encoders by checking for supported codec (thanks to F.O.R.A.R.T.)
 * Adding #430 Minimise to tray (thanks to ProFire)
+* Changing rigaya encoders end time would use --trim instead of --seekto
 * Fixing #441 outdated SVT-AV1 Encoding Guide link (thanks to Yuzbashi)
 
 ## Version 5.3.0
